# DDStore

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
examples/vae/: README.md  distdataset.py  job-summit.sh  vae-ddp-service.py  vae-ddp.py
include/: common.h  ddstore.hpp
src/: common.cxx  ddstore.cxx  pyddstore.pyx
test/: demo.cxx  demo.py  demo2.py  test.py
